fixed images not showing

--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ aside {
   border: 5px solid black;
   border-radius: 5px;
 	color: black;
-  background-image: url(worldtravel.jpeg);
+  background-image: url(worldtravel.jpg);
   background-position: center center;
   background-size: cover;
   margin-top: 550px;
